[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zeroconnect"
description = 'Use zeroconf to automatically connect devices via TCP on a LAN'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["zeroconf", "automatic", "automagic", "connect", "mesh", "network", "iot", "tcp"]
authors = [
  { name = "Erhannis Kirran", email = "eyeillus@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "netifaces",
  "zeroconf"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/erhannis/zeroconnect#readme"
Issues = "https://github.com/erhannis/zeroconnect/issues"
Source = "https://github.com/erhannis/zeroconnect"

[tool.hatch.version]
path = "zeroconnect/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=zeroconnect --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "zeroconnect/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
